--- a/res/layout/header_ad_layout.xml
+++ b/res/layout/header_ad_layout.xml
@@ -2,12 +2,16 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="180dp">
+    android:layout_height="180dp"
+    android:clipChildren="false">
 
    <android.support.v4.view.ViewPager
         android:id="@+id/vp_ad"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:clipChildren="false"
+                android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"/>
 
     <LinearLayout
         android:id="@+id/ll_index_container"
