--- a/res/layout/activity_contact.xml
+++ b/res/layout/activity_contact.xml
@@ -7,12 +7,7 @@
         android:orientation="vertical" >
         <TextView
             android:id="@+id/show_letter"
-            android:layout_width="70dip"
-            android:layout_height="50dip"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="A"
-            android:textColor="#6FCD78"
-            android:textSize="30sp"
-            android:textStyle="bold"/>
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="center"/>
     </RelativeLayout>
