--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+android:fitsSystemWindows="true"  
     tools:context="com.example.activity.MainActivity" >
     <com.example.stickyheaderlsitview.SmoothListView
         android:id="@+id/listView"
