--- a/res/values/attr.xml
+++ b/res/values/attr.xml
@@ -22,4 +22,9 @@
         <attr name="direction" />
     </declare-styleable>
 
+    <declare-styleable name="roundedimageview">
+        <attr name="border_thickness" format="dimension" />
+        <attr name="border_inside_color" format="color" />
+        <attr name="border_outside_color" format="color"></attr>
+    </declare-styleable>
 </resources>
