--- a/res/layout/showcliphead_activity.xml
+++ b/res/layout/showcliphead_activity.xml
@@ -4,15 +4,16 @@
     android:layout_height="match_parent"
     android:background="#ffffff" >
 
-<!--     <ImageView -->
-<!--         android:id="@+id/id_showImage" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:layout_centerInParent="true" -->
-<!--          /> -->
-     <com.example.widget.RoundImageView
+    <ImageView
+        android:id="@+id/id_showImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:layout_centerInParent="true"
+         />
+<!--      <com.example.widget.RoundImageView
             android:id="@+id/id_showImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true" /> -->
 </RelativeLayout>
