--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,3 +1,7 @@
 <resources>
-
+   <style name="title_name_style">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
